- fixed wrong color on UN goal card - Made charities search bar responsive - responsive about us page - added margins to charity cards so theyre not wall to wall

--- a/client/css/aboutUs.css
+++ b/client/css/aboutUs.css
@@ -18,7 +18,7 @@
     width: 500px;
     min-width: 400px;
     height: 430px;
-    left: 100px;
+    left: 5vw;
     font-size: 18px;
     line-height: normal;
     margin: 30px 0 30px 5vw;
@@ -54,20 +54,20 @@
 
 .first-layer-art {
     position: absolute;
-    width: 966px;
+    width: 800px;
     height: auto;
-    left: 900px;
-    top: -40px;
+    left: 50vw;
+    top: -3vw;
     min-width: 400px;
     min-height: 300px;
 }
 
 .top-layer-art {
     position: absolute;
-    width: 966px;
+    width: 800px;
     height: auto;
-    left: 900px;
-    top: -40px;
+    left: 50vw;
+    top: -1vw;
     min-width: 300px;
     min-height: 200px;
 }
@@ -83,7 +83,6 @@
     flex-direction: row;
     margin: 0 0 100px;
     gap: 100px;
-    top: 0px;
 }
 
 .small-box {
@@ -140,4 +139,42 @@
     margin-bottom: 15px;
     -webkit-filter: drop-shadow(5px 5px 5px rgba(102, 102, 102, 0.15));
     filter: drop-shadow(5px 5px 5px rgba(102, 102, 102, 0.15));
+}
+
+/* Media Queries */
+
+@media (max-width: 1325px) {
+
+    .art-box {
+        overflow: hidden;
+    }
+
+    .big-container {
+        justify-content: center;
+    }
+
+    .second-row-box {
+        justify-content: center;
+    }
+    .ourMission-txt{
+        position: relative;
+        margin: 0 0 0 5%;
+    }
+}
+
+@media (max-width: 1796px) {
+
+    .knowledge-text-box {
+        left: 5vm;
+    }
+
+    .big-container {
+        justify-content: center;
+    }
+
+    .ourMission-txt{
+        justify-content: center;
+        position: relative;
+        margin: 0 0 0 5%;
+    }
 }
